# TinyDIP

./: .gitignore  CMakeLists.txt  README.md  base_types.h  basic_functions.h  build.sh  cube.cpp  cube.h  cube_operations.h  dynamic_loader.h  histogram.h  image.cpp  image.h  image_io.cpp  image_io.h  image_operations.h  image_operations_cuda.cu  image_operations_cuda.h  linear_algebra.h  main.cpp  main.h  plugin_api.h  plugin_math.cpp  plugin_math_add.cpp  plugin_replace.cpp  timer.h  unistd.h
.github/workflows/: snap.yml
Dictionary/: 50.dbmp  51.dbmp  53.dbmp  54.dbmp  55.dbmp  56.dbmp  57.dbmp  58.dbmp  59.dbmp  60.dbmp  61.dbmp  62.dbmp  63.dbmp  64.dbmp  65.dbmp  66.dbmp  67.dbmp  68.dbmp  69.dbmp  70.dbmp  71.dbmp  72.dbmp  73.dbmp  74.dbmp  75.dbmp  77.dbmp  78.dbmp  79.dbmp  80.dbmp  81.dbmp  82.dbmp  83.dbmp  84.dbmp  85.dbmp  86.dbmp  87.dbmp  88.dbmp  89.dbmp  90.dbmp  91.dbmp  (+9 more)
android/app/src/main/res/values/: strings.xml
docs/basic_functions/: README.md
snap/: snapcraft.yaml
test/: DiamondWheelAnalysis.cpp  RANSAC_InlierVisualizationTest.cpp  absTest.cpp  allOfTest.cpp  backgroundTest.cpp  bicubicInterpolationTest.cpp  bilateralFilterTest.cpp  concatHorizontalTest.cpp  concatTest.cpp  concatTest2.cpp  concatVerticalTest.cpp  concatVerticalTest2.cpp  conv2Test.cpp  conv2Test2.cpp  conv2Test3.cpp  conv3Test.cpp  convnTest.cpp  csvReadTest.cpp  csvWriteTest.cpp  dbmpFileToCSV.cpp  dct2Test.cpp  dct2Test2.cpp  dct2Test3.cpp  dct2Test4.cpp  dct3DetailTest.cpp  dct3LargeImageTest.cpp  dct3Test.cpp  dft2Test.cpp  dictionaryBasedNonLocalMeanTest.cpp  differenceOfGaussianTest.cpp  doubleImageIOTest.cpp  flipVerticalTest.cpp  gaussianFigure2DTest.cpp  gaussianFisheyeTest.cpp  getNFromVariadicTemplatesTest.cpp  highlightRegionTest.cpp  histogramTest.cpp  idct2Test.cpp  idct3DetailTest.cpp  imageCastTest.cpp  (+62 more)
